--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//models/fan_curves/generator_fan_curves.py=utf-8
+encoding//models/sensors/one_sensor.py=utf-8
+encoding//models/sensors/sensors_current.py=utf-8
 encoding//models/shift_correction_model.py=utf-8
 encoding//tests/test_sensor_channals.py=utf-8
 encoding//tests/test_shift_correction.py=utf-8
