--- a/embedded/cc-cmake-space/CMakeLists.txt
+++ b/embedded/cc-cmake-space/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 aux_source_directory(./src SRC_LIST)
 
 set(GMock "../../3rdparty/gmock-1.6.0/fused-src")
-set(Canary "./src/embedded/canary/")
+set(Canary "./src/canary/")
 
 # Test framework
 include_directories(${GMock}/)
@@ -12,15 +12,16 @@ include_directories(./src/)
 
 file( GLOB  canaryEngine  ${Canary}/engine/*.c)
 file( GLOB  canaryLogicalDevices  ${Canary}/logical_devices/*.c)
-file( GLOB  canaryVirtualDevices  ${Canary}/virtual_devices/*.c)
-file( GLOB  canarySignalSlots  ${Canary}/signals_slots/*.c)
+file( GLOB  canaryVM  ${Canary}/vm/*.c)
+
+file( GLOB test ./test/*.cc)
 
 add_executable(
     ${PROJECT_NAME}
     ${SRC_LIST}
     ${canaryEngine}
     ${canaryLogicalDevices}
-    ${canaryVirtualDevices}
-    ${canarySignalSlots}
+    ${canaryVM}
+    ${test}
     ${GMock}/gmock-gtest-all.cc)
 
